UPGRADE: add a few tweaks.

--- a/v3.1-UPDATE.md
+++ b/v3.1-UPDATE.md
@@ -33,12 +33,12 @@
 
   * From the terminal session, run the following command
   ```
-  tar xvzf ips-3.1.0.0-linux*.tar.gz
+  tar -xvf ips-3.1.0-linux.tar.gz
   ```
 
   * From the terminal session, run the following command
   ```
-  cd ips-3.1.0/bin
+  cd ips-3.1.0/bin/
   ```
 
   * From the terminal session, run the following command
