Add cryptoneversleeps update script docs
Signed-off-by: Tyler Baker <tyler@opensourcefoundries.com>

--- a/v3.1-UPDATE.md
+++ b/v3.1-UPDATE.md
@@ -2,6 +2,8 @@
 
 ## Linux VPS
 
+If you've used CryptoNeverSleeps IPSUM Linux Installation script, he has provided an easy to use upgrade guide [here](UPDATE-SCRIPT.md)
+
 ### Connect to your Linux VPS over SSH
 
   * Use your favorite terminal application on Linux or Putty/Bitvise clients on Windows
